--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-
     implementation "android.arch.persistence.room:runtime:1.1.1"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
